syntax = "proto3";

package sphana.database.rpc.v1;

option csharp_namespace = "Sphana.Database.RPC.V1";

import "sphana/common/v1/common_messages.proto";

message IngestRequest {
  Index index = 1;
  Document document = 2;
}

message IngestResponse {
  sphana.common.v1.Status status = 1;
}

message QueryRequest {
  Index index = 1;
  string query = 2;
}

message QueryResponse {
  sphana.common.v1.Status status = 1;
  string result = 2;
}

message Index {
	string tenant_id = 1;
	string index_name = 2;
}

message Document {
  string title = 1;
  string document = 2; // todo: change to "content"
  map<string, string> metadata = 3;
}