syntax = "proto3";

package sphana.database.rpc.v1;

option csharp_namespace = "Sphana.Database.RPC.V1";

import "sphana/database/v1/sphana_database_messages.proto";

service SphanaDatabase {
  rpc Ingest (IngestRequest) returns (IngestResponse);
  rpc Query (QueryRequest) returns (QueryResponse);
}
